# uploader

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  build
.github/workflows/: build.yml
backend/: Cargo.toml  build.rs
backend/.cargo/: config.toml
backend/src/: main.rs
docs/: api.md  build-release.md  frontend-backend.md  openapi.json  operations.md  overview.md  postman-collection.json  storage.md  upload-flow.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
