[package]
name = "receiver"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = { version = "4.11", default-features = false, features = ["macros", "cookies"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
log = "0.4"
mime_guess = "2"
rand = "0.8"
rust-embed = { version = "8", features = ["actix-web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
